fix on ie11
anhlanh

--- a/SASS/Layout/__parimary.sass
+++ b/SASS/Layout/__parimary.sass
@@ -255,18 +255,20 @@
             top: 18px
             bottom: 70px
     &__wrap
-        display: grid
-        grid-template-columns: calc(50% - 10px) calc(50% - 10px)
+        display: flex
         max-width: 1120px
         grid-gap: 20px
         margin: auto
         position: relative
         align-items: flex-end
         +mobile()
-            grid-template-columns: 100%
+            flex-direction: column
             max-width: 500px
         & > *
-            width: 100%
+            min-width: calc(50% - 10px)
+            +mobile()
+                min-width: 1px
+                max-width: 500px
     &__content
         +mobile()
             margin-right: 0px
@@ -543,16 +545,30 @@
     &__wrap
         max-width: 1120px
         margin: auto
-        display: grid
-        grid-template-columns: repeat(2, 1fr)
-        grid-gap: 20px
+        display: flex
+        flex-wrap: wrap
+        width:  100%
         +mobile()
-            grid-template-columns: repeat(1, 1fr)
+            flex-direction: column
             max-width: 500px
         figure 
+            max-width: calc(50% - 10px)
             width: 100%
             margin: 0px
             position: relative
+            &:nth-of-type(1)
+                margin: 0px 20px 20px 0px
+            &:nth-of-type(2)
+                margin: 0px 0px 20px
+            &:nth-of-type(3)
+                margin: 0px 20px 0px 0px
+            +mobile()
+                max-width: 100%
+                &:nth-of-type(1)
+                    margin-right: 0px
+                &:nth-of-type(3)
+                    margin-right: 0px
+                    margin-bottom: 20px
             a 
                 position: absolute
                 top: 0px
