--- a/css/main.css
+++ b/css/main.css
@@ -449,10 +449,9 @@
 }
 
 .interview__wrap {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: calc(50% - 10px) calc(50% - 10px);
-      grid-template-columns: calc(50% - 10px) calc(50% - 10px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   max-width: 1120px;
   grid-gap: 20px;
   margin: auto;
@@ -464,14 +463,23 @@
 
 @media screen and (max-width: 48em) {
   .interview__wrap {
-    -ms-grid-columns: 100%;
-        grid-template-columns: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     max-width: 500px;
   }
 }
 
 .interview__wrap > * {
-  width: 100%;
+  min-width: calc(50% - 10px);
+}
+
+@media screen and (max-width: 48em) {
+  .interview__wrap > * {
+    min-width: 1px;
+    max-width: 500px;
+  }
 }
 
 @media screen and (max-width: 48em) {
@@ -949,25 +957,54 @@
 .Newsfocus__wrap {
   max-width: 1120px;
   margin: auto;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  grid-gap: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
 }
 
 @media screen and (max-width: 48em) {
   .Newsfocus__wrap {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     max-width: 500px;
   }
 }
 
 .Newsfocus__wrap figure {
+  max-width: calc(50% - 10px);
   width: 100%;
   margin: 0px;
   position: relative;
+}
+
+.Newsfocus__wrap figure:nth-of-type(1) {
+  margin: 0px 20px 20px 0px;
+}
+
+.Newsfocus__wrap figure:nth-of-type(2) {
+  margin: 0px 0px 20px;
+}
+
+.Newsfocus__wrap figure:nth-of-type(3) {
+  margin: 0px 20px 0px 0px;
+}
+
+@media screen and (max-width: 48em) {
+  .Newsfocus__wrap figure {
+    max-width: 100%;
+  }
+  .Newsfocus__wrap figure:nth-of-type(1) {
+    margin-right: 0px;
+  }
+  .Newsfocus__wrap figure:nth-of-type(3) {
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
 }
 
 .Newsfocus__wrap figure a {
